--- a/index.html
+++ b/index.html
@@ -30,13 +30,8 @@
   
   <section class="hero">
     <h1><span class="highlight-navy">We Listen. We Curate.</span><br><span class="highlight-teal">You Hire.</span></h1>
-    <p>Professional recruitment solutions that connect exceptional talent with forward-thinking companies.</p>
+    <p>At Veriscope Talent, we bring the right people and great companies together.</p>
     <a href="#" class="cta-btn">Start Your Search</a>
-  </section>
-  
-  <section class="feature-intro">
-    <h2>Talent Acquisition Made Simple</h2>
-    <p>At Veriscope Talent, we bridge the gap between exceptional professionals and innovative companies through our comprehensive recruitment solutions.</p>
   </section>
   
   <section class="features">
