--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
   </div>
   
   <section class="hero">
-    <h1><span class="highlight-navy">We Listen. We Curate.</span><br><span class="highlight-teal">You Hire.</span></h1>
-    <p>At Veriscope Talent, we bring the right people and great companies together.</p>
+    <h1><span class="highlight-navy">We Listen.<span class="mobile-break"><br></span> We Curate.</span><br><span class="highlight-teal">You Hire.</span></h1>
+    <p>At Veriscope Talent, we bring the <span class="underline-phrase">right people</span> and <span class="underline-phrase">great companies</span> together.</p>
     <a href="#" class="cta-btn">Start Your Search</a>
   </section>
   
