--- a/index.html
+++ b/index.html
@@ -29,9 +29,14 @@
   </div>
   
   <section class="hero">
-    <h1><span class="highlight-navy">We Listen.<span class="mobile-break"><br></span> We Curate.</span><br><span class="highlight-teal">You Hire.</span></h1>
-    <p>At Veriscope Talent, we bring the <span class="underline-phrase">right people</span> and <span class="underline-phrase">great companies</span> together.</p>
-    <a href="#" class="cta-btn">Start Your Search</a>
+    <div class="hero-content">
+      <h1><span class="highlight-navy">We Listen.<span class="mobile-break"><br></span> We Curate.</span><br><span class="highlight-teal">You Hire.</span></h1>
+      <p>At Veriscope Talent, we bring right talent<br>and great companies together.</p>
+      <a href="#" class="cta-btn">Start Your Search</a>
+    </div>
+    <div class="hero-image">
+      <img src="images/flat_design.png" alt="Talent Connection Illustration">
+    </div>
   </section>
   
   <section class="features">
