--- a/index.html
+++ b/index.html
@@ -39,6 +39,32 @@
     </div>
   </section>
   
+  <section class="services">
+    <div class="services-container">
+      <h2>Our Services</h2>
+      
+      <div class="service-card">
+        <h3>Executive Search</h3>
+        <p>Specialized recruitment for C-level executives and senior leadership positions across industries.</p>
+        <ul class="service-features">
+          <li><span class="checkmark">✔</span> Leadership Assessment</li>
+          <li><span class="checkmark">✔</span> Cultural Fit Analysis</li>
+          <li><span class="checkmark">✔</span> Succession Planning</li>
+        </ul>
+      </div>
+      
+      <div class="service-card">
+        <h3>Talent Acquisition</h3>
+        <p>Full-cycle recruitment services for permanent and contract positions at all organizational levels.</p>
+        <ul class="service-features">
+          <li><span class="checkmark">✔</span> Technical Screening</li>
+          <li><span class="checkmark">✔</span> Skills Assessment</li>
+          <li><span class="checkmark">✔</span> Reference Validation</li>
+        </ul>
+      </div>
+    </div>
+  </section>
+
   <section class="features">
     <div class="feature-box">
       <img src="images/target-svgrepo-com.svg" alt="Precision Hiring">
