--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <section class="hero">
     <div class="hero-content">
       <h1><span class="highlight-navy">We Listen.<span class="mobile-break"><br></span> We Curate.</span><br><span class="highlight-teal">You Hire.</span></h1>
-      <p>At Veriscope Talent, we bring right talent<br>and great companies together.</p>
+      <p>At Veriscope Talent, we connect the right talent with great companies.<br>From core team hires to senior leadership, we help you hire across all stages.</p>
       <a href="#" class="cta-btn">Start Your Search</a>
     </div>
     <div class="hero-image">
