--- a/index.html
+++ b/index.html
@@ -119,5 +119,11 @@
       menu.classList.toggle('show');
     }
   </script>
+  
+ <footer id="contact">
+  <p>© 2025 Veriscope Talent. All rights reserved.</p>
+  <p>Contact us: <a href="mailto:hello@veriscopetalent.com" style="color: #21c6c6;">hello@veriscopetalent.com</a></p>
+</footer>
+ 
 </body>
 </html>
