--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
       </div>
       <div class="footer-right">
         <div class="footer-logo">
-          <img src="images/veriscope_logo.png" alt="Veriscope Talent Logo">
+          <img src="images/veriscope_logo_black.png" alt="Veriscope Talent Logo">
           <span>VERISCOPE TALENT</span>
         </div>
         <nav class="footer-nav">
