--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <div class="logo">
-      <img src="images/veriscope_logo.png" alt="Veriscope Talent Logo">
+      <img src="images/veriscope_logo_black.png" alt="Veriscope Talent Logo">
       <span>VERISCOPE TALENT</span>
     </div>
     <nav class="nav-links">
