--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <a href="#services">Services</a>
       <a href="#about">About</a>
       <a href="#portfolio">Portfolio</a>
+	  <a href="submit.html">For Candidates</a>
       <a href="#contact" class="contact-btn">Contact Us</a>
     </nav>
     <div class="hamburger" onclick="toggleMenu()">☰</div>
@@ -25,6 +26,7 @@
     <a href="#services">Services</a>
     <a href="#about">About</a>
     <a href="#portfolio">Portfolio</a>
+	<a href="submit.html">For Candidates</a>
     <a href="#contact" class="contact-btn">Contact Us</a>
   </div>
   
