--- a/index.html
+++ b/index.html
@@ -114,6 +114,21 @@
       </div>
     </div>
   </section>
+  
+  <!-- CONTACT SECTION START -->
+<section class="contact-section" id="contact">
+  <h2>Contact Us</h2>
+  <p>Looking to hire? We'd love to hear from you.</p>
+
+  <form action="https://formsubmit.co/f4815bb18b7e825053056173b1449e3d" method="POST" class="contact-form">
+	<input type="text" name="name" placeholder="Your Name" required>
+	<input type="email" name="email" placeholder="Your Email" required>
+	<textarea name="message" placeholder="Tell us about your hiring need..." rows="5" required></textarea>
+	<button type="submit">Send Message</button>
+  </form>
+</section>
+<!-- CONTACT SECTION END -->
+  
 
   <footer id="contact">
     <div class="footer-container">
