--- a/index.html
+++ b/index.html
@@ -65,6 +65,33 @@
         </ul>
       </div>
     </div>
+	
+	<!-- Industries We Support -->
+	<div class="industry-section">
+	  <h3>Industries We Support</h3>
+	  <div class="industry-grid">
+		<div class="industry-card">BFSI & Manufacturing</div>
+		<div class="industry-card">Life Sciences & Healthcare</div>
+		<div class="industry-card">High-Tech & Startups</div>
+		<div class="industry-card">Oil, Gas & Energy Utilities</div>
+	  </div>
+	</div>
+
+	<!-- Technologies & Roles -->
+	<div class="tech-section">
+	  <h3>Technologies & Roles We Hire For</h3>
+	  <div class="tech-grid">
+		<span class="tech-item">SAP</span>
+		<span class="tech-item">Salesforce</span>
+		<span class="tech-item">Java</span>
+		<span class="tech-item">Cloud & DevOps</span>
+		<span class="tech-item">AI & Data</span>
+		<span class="tech-item">Executive Search</span>
+		<span class="tech-item">Leadership Roles</span>
+		<span class="tech-item">Sales Hiring</span>
+	  </div>
+	</div>
+	
   </section>
 
   <section class="about-us" id="about">
