--- a/submit.html
+++ b/submit.html
@@ -22,6 +22,9 @@
       <!-- Optional: Redirect to thank you -->
       <input type="hidden" name="_next" value="https://varunvinjam.github.io/veriscope-talent/thank-you.html">
 
+	  <!-- Honeypot anti-spam field -->
+	  <input type="text" name="_honey" style="display:none">
+
       <button type="submit">Submit Profile</button>
     </form>
   </section>
