--- a/index.html
+++ b/index.html
@@ -70,9 +70,11 @@
 	<div class="industry-section">
 	  <h3>Industries We Support</h3>
 	  <div class="industry-grid">
-		<div class="industry-card">BFSI & Manufacturing</div>
+		<div class="industry-card">Banking, Financial Services, and Insurance</div>
+		<div class="industry-card">Manufacturing</div>
 		<div class="industry-card">Life Sciences & Healthcare</div>
 		<div class="industry-card">High-Tech & Startups</div>
+		<div class="industry-card">Retail & E-commerce</div>
 		<div class="industry-card">Oil, Gas & Energy Utilities</div>
 	  </div>
 	</div>
@@ -80,15 +82,25 @@
 	<!-- Technologies & Roles -->
 	<div class="tech-section">
 	  <h3>Technologies & Roles We Hire For</h3>
+
+	  <h4 class="sub-heading">Technologies</h4>
 	  <div class="tech-grid">
 		<span class="tech-item">SAP</span>
 		<span class="tech-item">Salesforce</span>
 		<span class="tech-item">Java</span>
 		<span class="tech-item">Cloud & DevOps</span>
 		<span class="tech-item">AI & Data</span>
+		<span class="tech-item">Product & Engineering</span>
+	  </div>
+
+	  <h4 class="sub-heading">Functions & Roles</h4>
+	  <div class="tech-grid">
 		<span class="tech-item">Executive Search</span>
-		<span class="tech-item">Leadership Roles</span>
+		<span class="tech-item">Tech Leadership (CTO, VP Eng)</span>
+		<span class="tech-item">Product Leadership (CPO, Product Head)</span>
 		<span class="tech-item">Sales Hiring</span>
+		<span class="tech-item">GTM & Customer Success Teams</span>
+		<span class="tech-item">Engineering Teams</span>
 	  </div>
 	</div>
 	
