--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 	<div class="industry-section">
 	  <h3>Industries We Support</h3>
 	  <div class="industry-grid">
-		<div class="industry-card">Banking, Financial Services, and Insurance</div>
+		<div class="industry-card">BFSI</div>
 		<div class="industry-card">Manufacturing</div>
 		<div class="industry-card">Life Sciences & Healthcare</div>
 		<div class="industry-card">High-Tech & Startups</div>
