--- a/index.html
+++ b/index.html
@@ -150,6 +150,16 @@
         </ul>
         
         <p>Whether it's your first hire or a leadership search, we bring speed, precision, and context to every mandate.</p>
+		
+		<!-- 🔵 Impact Highlights -->
+		  <div class="portfolio-highlights">
+			<div class="highlight-box">500+ Roles Closed</div>
+			<div class="highlight-box">100+ Leadership Hires</div>
+			<div class="highlight-box">Clients Across 6+ Industries</div>
+			<div class="highlight-box">Tech, Product, Sales & GTM Hiring</div>
+			<div class="highlight-box">Fastest Closure: 3 Days</div>
+		  </div>
+		
       </div>
     </div>
   </section>
