--- a/index.html
+++ b/index.html
@@ -140,7 +140,12 @@
       <h2>Our Portfolio</h2>
       
       <div class="portfolio-description">
-        <p>We've worked with a range of companies — from fast-scaling startups to established businesses — helping them close critical roles across functions and levels.</p>
+        <ul class="portfolio-list">
+		  <li><span class="checkmark">✔</span> Worked with a range of companies — from fast-scaling startups to established businesses.</li>
+		  <li><span class="checkmark">✔</span> Closed roles across tech, product, sales, design, and operations.</li>
+		  <li><span class="checkmark">✔</span> Clientele across India, Europe, USA, and the Middle East.</li>
+		  <li><span class="checkmark">✔</span> Delivered candidates within 3–10 days for urgent mandates.</li>
+		</ul>
 		
 		<!-- 🔵 Impact Highlights -->
 		  <div class="portfolio-highlights">
