--- a/index.html
+++ b/index.html
@@ -41,6 +41,32 @@
     </div>
   </section>
   
+  <section class="about-us" id="about">
+    <h2>About Us</h2>
+    <div class="about-description">
+      <p>At Veriscope Talent, we help growing teams and established businesses hire better — with speed, precision, and long-term fit in mind. We work across industries like Banking & Financial Services, Manufacturing, Healthcare, Life Sciences, High-Tech, and Energy. Whether it's building core teams for early-stage startups or hiring leadership for larger enterprises, we bring a hands-on, thoughtful approach to every search. Our focus is on understanding your context, curating the right talent, and delivering results — without flooding inboxes or compromising on quality.</p>
+    </div>
+
+    <div class="features">
+      <div class="feature-box">
+        <img src="images/target-svgrepo-com.svg" alt="Precision Hiring">
+        <h3>Precision Hiring</h3>
+        <p>Every search is handled with care. We don't flood inboxes — we handpick profiles that align with your context, team needs, and long-term fit.</p>
+      </div>
+      <div class="feature-box">
+        <img src="images/lightning-svgrepo-com.svg" alt="Quick Turnarounds">
+        <h3>Quick Turnarounds</h3>
+        <p>We move fast without compromising quality. Our process is built to deliver strong candidates — often in days, not weeks.</p>
+      </div>
+      <div class="feature-box">
+        <img src="images/group-svgrepo-com.svg" alt="Built for All Hiring Stages">
+        <h3>Built for All Hiring Stages</h3>
+        <p>Whether you're hiring core team members or senior management, we've got you covered.</p>
+      </div>
+    </div>
+  </section>
+  
+  
   <section class="services" id="services">
     <div class="services-container">
       <h2>Our Services</h2>
@@ -106,34 +132,7 @@
 	
   </section>
 
-  <section class="about-us" id="about">
-    <h2>About Us</h2>
-    <div class="about-description">
-      <p>We're a boutique hiring consultancy focused on delivering thoughtful, efficient hiring solutions for growing teams.</p>
-      
-      <p>Built on years of real-world hiring experience, Veriscope Talent blends strategic insight with a hands-on approach. We don't just match resumes — we help companies find talent that fits their context, culture, and long-term goals.</p>
-      
-      <p>From core team hires to senior management, we work as your extended hiring partner — committed to helping you build stronger teams, faster.</p>
-    </div>
-
-    <div class="features">
-      <div class="feature-box">
-        <img src="images/target-svgrepo-com.svg" alt="Precision Hiring">
-        <h3>Precision Hiring</h3>
-        <p>Every search is handled with care. We don't flood inboxes — we handpick profiles that align with your context, team needs, and long-term fit.</p>
-      </div>
-      <div class="feature-box">
-        <img src="images/lightning-svgrepo-com.svg" alt="Quick Turnarounds">
-        <h3>Quick Turnarounds</h3>
-        <p>We move fast without compromising quality. Our process is built to deliver strong candidates — often in days, not weeks.</p>
-      </div>
-      <div class="feature-box">
-        <img src="images/group-svgrepo-com.svg" alt="Built for All Hiring Stages">
-        <h3>Built for All Hiring Stages</h3>
-        <p>Whether you're hiring core team members or senior management, we've got you covered.</p>
-      </div>
-    </div>
-  </section>
+  
 
   <section class="portfolio" id="portfolio">
     <div class="portfolio-container">
