--- a/index.html
+++ b/index.html
@@ -67,43 +67,21 @@
   </section>
   
   
-  <section class="services" id="services">
-    <div class="services-container">
-      <h2>Our Services</h2>
-      
-      <div class="service-card">
-        <h3>Executive Search</h3>
-        <p>Specialized recruitment for C-level executives and senior leadership positions across industries.</p>
-        <ul class="service-features">
-          <li><span class="checkmark">✔</span> Leadership Assessment</li>
-          <li><span class="checkmark">✔</span> Cultural Fit Analysis</li>
-          <li><span class="checkmark">✔</span> Succession Planning</li>
-        </ul>
-      </div>
-      
-      <div class="service-card">
-        <h3>Talent Acquisition</h3>
-        <p>Full-cycle recruitment services for permanent and contract positions at all organizational levels.</p>
-        <ul class="service-features">
-          <li><span class="checkmark">✔</span> Technical Screening</li>
-          <li><span class="checkmark">✔</span> Skills Assessment</li>
-          <li><span class="checkmark">✔</span> Reference Validation</li>
-        </ul>
-      </div>
+ <section class="services" id="services">
+  <div class="services-container">
+    <h2>Industries We Support</h2>
+
+    <div class="industry-grid">
+      <div class="industry-card">Banking & Financial Services</div>
+      <div class="industry-card">Manufacturing</div>
+      <div class="industry-card">Life Sciences & Healthcare</div>
+      <div class="industry-card">High-Tech & Startups</div>
+      <div class="industry-card">Retail & E-commerce</div>
+      <div class="industry-card">Oil, Gas & Energy Utilities</div>
     </div>
-	
-	<!-- Industries We Support -->
-	<div class="industry-section">
-	  <h3>Industries We Support</h3>
-	  <div class="industry-grid">
-		<div class="industry-card">BFSI</div>
-		<div class="industry-card">Manufacturing</div>
-		<div class="industry-card">Life Sciences & Healthcare</div>
-		<div class="industry-card">High-Tech & Startups</div>
-		<div class="industry-card">Retail & E-commerce</div>
-		<div class="industry-card">Oil, Gas & Energy Utilities</div>
-	  </div>
-	</div>
+  </div>
+</section>
+
 
 	<!-- Technologies & Roles -->
 	<div class="tech-section">
