--- a/index.html
+++ b/index.html
@@ -67,20 +67,46 @@
   </section>
   
   
- <section class="services" id="services">
+<section class="services" id="services">
   <div class="services-container">
     <h2>Industries We Support</h2>
 
     <div class="industry-grid">
-      <div class="industry-card">Banking & Financial Services</div>
-      <div class="industry-card">Manufacturing</div>
-      <div class="industry-card">Life Sciences & Healthcare</div>
-      <div class="industry-card">High-Tech & Startups</div>
-      <div class="industry-card">Retail & E-commerce</div>
-      <div class="industry-card">Oil, Gas & Energy Utilities</div>
+
+      <div class="industry-card">
+        <img src="images/banking-svgrepo-com.svg" alt="Banking Icon" class="industry-icon">
+        Banking & Financial Services
+      </div>
+
+      <div class="industry-card">
+        <img src="images/factory-svgrepo-com.svg" alt="Manufacturing Icon" class="industry-icon">
+        Manufacturing
+      </div>
+
+      <div class="industry-card">
+        <img src="images/healthcare-svgrepo-com.svg" alt="Healthcare Icon" class="industry-icon">
+        Life Sciences & Healthcare
+      </div>
+
+      <div class="industry-card">
+        <img src="images/technology-svgrepo-com.svg" alt="Tech Icon" class="industry-icon">
+        High-Tech & Startups
+      </div>
+
+      <div class="industry-card">
+        <img src="images/commerce-tag-svgrepo-com.svg" alt="E-commerce Icon" class="industry-icon">
+        Retail & E-commerce
+      </div>
+
+      <div class="industry-card">
+        <img src="images/utilities-svgrepo-com.svg" alt="Utilities Icon" class="industry-icon">
+        Oil, Gas & Energy Utilities
+      </div>
+
     </div>
   </div>
 </section>
+
 
 
 	<!-- Technologies & Roles -->
