--- a/index.html
+++ b/index.html
@@ -102,6 +102,36 @@
         <img src="images/utilities-svgrepo-com.svg" alt="Utilities Icon" class="industry-icon">
         Oil, Gas & Energy Utilities
       </div>
+	  
+	  <div class="industry-card">
+	  <img src="images/shopping-cart-fast-moving-svgrepo-com.svg" alt="FMCG Icon" class="industry-icon">
+	  FMCG
+	  </div>
+
+	 <div class="industry-card">
+	  <img src="images/call-center-person-2-svgrepo-com.svg" alt="BPO Icon" class="industry-icon">
+	  BPO / KPO
+	 </div>
+
+	 <div class="industry-card">
+	  <img src="images/transmission-tower-svgrepo-com.svg" alt="Telecom Icon" class="industry-icon">
+	  Telecom
+	 </div>
+
+	 <div class="industry-card">
+	  <img src="images/real-estate-svgrepo-com.svg" alt="Real Estate Icon" class="industry-icon">
+	  Real Estate & Housing
+	 </div>
+
+	 <div class="industry-card">
+	  <img src="images/engineering-helmet-cog-svgrepo-com.svg" alt="Engineering Icon" class="industry-icon">
+	  Engineering
+	 </div>
+
+	 <div class="industry-card">
+	  <img src="images/television-technology-entertainment-svgrepo-com.svg" alt="Media Icon" class="industry-icon">
+	  Media & Entertainment
+	 </div>
 
     </div>
   </div>
