--- a/index.html
+++ b/index.html
@@ -41,6 +41,24 @@
     </div>
   </section>
   
+  
+  <section class="connect-section">
+  <div class="connect-container">
+    <div class="connect-box">
+      <h3>For Candidates</h3>
+      <p>Looking for your next role? Upload your profile and we’ll get in touch.</p>
+      <a href="submit.html" class="cta-btn">Upload Resume</a>
+    </div>
+
+    <div class="connect-box">
+      <h3>For Companies</h3>
+      <p>Need hiring support? Tell us what you're looking for — we’re here to help.</p>
+      <a href="#contact" class="cta-btn alt">Contact Us</a>
+    </div>
+  </div>
+</section>
+  
+  
   <section class="about-us" id="about">
     <h2>About Us</h2>
     <div class="about-description">
