--- a/index.html
+++ b/index.html
@@ -45,16 +45,18 @@
   <section class="connect-section">
   <div class="connect-container">
     <div class="connect-box">
-      <h3>For Candidates</h3>
-      <p>Looking for your next role? Upload your profile and we’ll get in touch.</p>
-      <a href="submit.html" class="cta-btn">Upload Resume</a>
-    </div>
+	  <img src="images/resume-4-svgrepo-com.svg" alt="Resume Icon" class="connect-icon">
+	  <h3>For Candidates</h3>
+	  <p>Looking for your next role? Share your resume and we’ll connect.</p>
+	  <a href="submit.html" class="cta-btn">Upload Resume</a>
+	</div>
 
-    <div class="connect-box">
-      <h3>For Companies</h3>
-      <p>Need hiring support? Tell us what you're looking for — we’re here to help.</p>
-      <a href="#contact" class="cta-btn alt">Contact Us</a>
-    </div>
+	<div class="connect-box">
+	  <img src="images/company-cooperation-group-svgrepo-com.svg" alt="Company Icon" class="connect-icon">
+	  <h3>For Companies</h3>
+	  <p>Need hiring support? Let us know your requirements — we’ll handle the rest.</p>
+	  <a href="#contact" class="cta-btn">Contact Us</a>
+	</div>
   </div>
 </section>
   
