--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 	<div class="connect-box">
 	  <img src="images/company-cooperation-group-svgrepo-com.svg" alt="Company Icon" class="connect-icon">
 	  <h3>For Companies</h3>
-	  <p>Need hiring support? Let us know your requirements — we’ll handle the rest.</p>
+	  <p>Need help hiring? Let’s find the right fit together.</p>
 	  <a href="#contact" class="cta-btn">Contact Us</a>
 	</div>
   </div>
