--- a/index.html
+++ b/index.html
@@ -201,32 +201,26 @@
 <!-- CONTACT SECTION END -->
   
 
-  <footer id="contact">
-    <div class="footer-container">
-      <div class="footer-left">
-        <h3>Let's Work Together</h3>
-        <p class="footer-subtitle">(or just drop in to say hi)</p>
-        <div class="contact-info">
-          <p><a href="mailto:hello@veriscopetalent.com">hello@veriscopetalent.com</a></p>
-          <p><a href="tel:+919000000000">(+91) - 90000 00000</a></p>
-        </div>
-      </div>
-      <div class="footer-right">
-        <div class="footer-logo">
-          <img src="images/veriscope_logo_black.png" alt="Veriscope Talent Logo">
-          <span>VERISCOPE TALENT</span>
-        </div>
-        <nav class="footer-nav">
-          <a href="#services">Services</a>
-          <a href="#about">About</a>
-          <a href="#portfolio">Portfolio</a>
-        </nav>
+ <footer id="contact">
+  <div class="footer-container">
+    <div class="footer-left">
+      <div class="footer-logo">
+        <img src="images/veriscope_logo_black.png" alt="Veriscope Talent Logo">
+        <span>Veriscope Talent</span>
       </div>
     </div>
-    <div class="footer-bottom">
-      <p>© 2025 Veriscope Talent. All rights reserved.</p>
-    </div>
-  </footer>
+
+    <nav class="footer-nav">
+      <a href="#services">Services</a>
+      <a href="#about">About</a>
+      <a href="#portfolio">Portfolio</a>
+    </nav>
+  </div>
+
+  <div class="footer-bottom">
+    <p>© 2025 Veriscope Talent. All rights reserved.</p>
+  </div>
+</footer>
   
   <script>
     function toggleMenu() {
