--- a/index.html
+++ b/index.html
@@ -223,48 +223,51 @@
 </footer>
   
   <script>
-    function toggleMenu() {
-      const menu = document.getElementById('mobileMenu');
-      menu.classList.toggle('show');
-    }
+  function toggleMenu() {
+    const menu = document.getElementById('mobileMenu');
+    menu.classList.toggle('show');
+  }
 
-    // Hide mobile menu when a link is clicked and handle smooth scrolling
-    document.addEventListener("DOMContentLoaded", () => {
-      const links = document.querySelectorAll("#mobileMenu a, .nav-links a");
-      links.forEach(link => {
-        link.addEventListener("click", (e) => {
-          // Hide mobile menu
-          const mobileMenu = document.getElementById("mobileMenu");
-          if (mobileMenu.classList.contains("show")) {
-            mobileMenu.classList.remove("show");
-          }
-          
-          // Handle smooth scrolling for anchor links
-          const href = link.getAttribute("href");
-          if (href.startsWith("#")) {
-            e.preventDefault();
-            const targetElement = document.querySelector(href);
-            if (targetElement) {
-              targetElement.scrollIntoView({
-                behavior: "smooth",
-                block: "start"
-              });
-            }
-          }
-        });
-      });
+  document.addEventListener("DOMContentLoaded", () => {
+    const links = document.querySelectorAll("#mobileMenu a, .nav-links a");
+    const hamburger = document.querySelector(".hamburger");
+    const mobileMenu = document.getElementById("mobileMenu");
 
-      // Close mobile menu when clicking outside
-      document.addEventListener("click", (e) => {
-        const mobileMenu = document.getElementById("mobileMenu");
-        const hamburger = document.querySelector(".hamburger");
-        
-        if (!mobileMenu.contains(e.target) && !hamburger.contains(e.target)) {
-          mobileMenu.classList.remove("show");
+    // Hide mobile menu when a link is clicked
+    links.forEach(link => {
+      link.addEventListener("click", (e) => {
+        // Smooth scroll
+        const href = link.getAttribute("href");
+        if (href && href.startsWith("#")) {
+          e.preventDefault();
+          const targetElement = document.querySelector(href);
+          if (targetElement) {
+            targetElement.scrollIntoView({
+              behavior: "smooth",
+              block: "start"
+            });
+          }
         }
+
+        // Close the mobile menu
+        mobileMenu.classList.remove("show");
       });
     });
-  </script>
+
+    // Close mobile menu when clicking outside
+    document.addEventListener("click", (e) => {
+      if (!mobileMenu.contains(e.target) && !hamburger.contains(e.target)) {
+        mobileMenu.classList.remove("show");
+      }
+    });
+
+    // Fix: Rebind hamburger to reopen menu correctly
+    hamburger.addEventListener("click", (e) => {
+      e.stopPropagation(); // Prevent it from triggering outside click listener
+      mobileMenu.classList.toggle("show");
+    });
+  });
+</script>
  
 </body>
 </html>
