--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <header>
+ 
+ <header>
     <div class="logo">
       <img src="images/veriscope_logo_black.png" alt="Veriscope Talent Logo">
       <span>VERISCOPE TALENT</span>
@@ -222,21 +223,21 @@
   </div>
 </footer>
   
-  <script>
-  function toggleMenu() {
-    const menu = document.getElementById('mobileMenu');
-    menu.classList.toggle('show');
-  }
-
+<script>
   document.addEventListener("DOMContentLoaded", () => {
-    const links = document.querySelectorAll("#mobileMenu a, .nav-links a");
     const hamburger = document.querySelector(".hamburger");
     const mobileMenu = document.getElementById("mobileMenu");
+    const links = document.querySelectorAll("#mobileMenu a");
 
-    // Hide mobile menu when a link is clicked
+    // Toggle menu on hamburger click
+    hamburger.addEventListener("click", (e) => {
+      e.stopPropagation();
+      mobileMenu.classList.toggle("show");
+    });
+
+    // Close menu when link is clicked and scroll to target
     links.forEach(link => {
       link.addEventListener("click", (e) => {
-        // Smooth scroll
         const href = link.getAttribute("href");
         if (href && href.startsWith("#")) {
           e.preventDefault();
@@ -249,24 +250,17 @@
           }
         }
 
-        // Close the mobile menu
+        // Always close menu
         mobileMenu.classList.remove("show");
       });
     });
 
-    // Close mobile menu when clicking outside
+    // Close menu if user clicks outside
     document.addEventListener("click", (e) => {
       if (!mobileMenu.contains(e.target) && !hamburger.contains(e.target)) {
         mobileMenu.classList.remove("show");
       }
     });
-
-   
-    // This ensures hamburger click works consistently
-	hamburger.addEventListener("click", (e) => {
-	  e.stopPropagation();
-	  mobileMenu.classList.toggle("show");
-	});
   });
 </script>
  
