--- a/index.html
+++ b/index.html
@@ -20,16 +20,20 @@
 	  <a href="submit.html">For Candidates</a>
       <a href="#contact" class="contact-btn">Contact Us</a>
     </nav>
-    <div class="hamburger">☰</div>
+  
+	<div class="hamburger-wrapper">
+	  <div class="hamburger" onclick="toggleMenu()">☰</div>
+	  <div class="mobile-menu" id="mobileMenu">
+		<a href="#services">Services</a>
+		<a href="#about">About</a>
+		<a href="#portfolio">Portfolio</a>
+		<a href="submit.html">For Candidates</a>
+		<a href="#contact" class="contact-btn">Contact Us</a>
+	  </div>
+	</div>
+
   </header>
   
-  <div class="mobile-menu" id="mobileMenu">
-    <a href="#services">Services</a>
-    <a href="#about">About</a>
-    <a href="#portfolio">Portfolio</a>
-	<a href="submit.html">For Candidates</a>
-    <a href="#contact" class="contact-btn">Contact Us</a>
-  </div>
   
   <section class="hero" id="hero">
     <div class="hero-content">
