--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   <section class="about-us" id="about">
     <h2>About Us</h2>
     <div class="about-description">
-      <p>At Veriscope Talent, we help growing teams and established businesses hire better — with speed, precision, and long-term fit in mind. We work across industries like Banking & Financial Services, Manufacturing, Healthcare, Life Sciences, High-Tech, and Energy. Whether it's building core teams for early-stage startups or hiring leadership for larger enterprises, we bring a hands-on, thoughtful approach to every search. Our focus is on understanding your context, curating the right talent, and delivering results — without flooding inboxes or compromising on quality.</p>
+      <p>At Veriscope Talent, we help you build teams that are the engine for your growth. Our deep-rooted expertise in sectors like Banking & Financial Services, IT, Manufacturing, and Healthcare & Life Sciences provides an intimate understanding of your unique challenges and opportunities. This foundational knowledge allows us to act as a true strategic partner, not just a recruiter. We respect your time, protect your standards, and ultimately, help you build the exceptional team your business deserves.</p>
     </div>
 
     <div class="features">
