--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </nav>
   
 	<div class="hamburger-wrapper">
-	  <div class="hamburger" onclick="toggleMenu()">☰</div>
+	  <div class="hamburger">☰</div>
 	  <div class="mobile-menu" id="mobileMenu">
 		<a href="#services">Services</a>
 		<a href="#about">About</a>
