--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		<a href="#about">About</a>
 		<a href="#portfolio">Portfolio</a>
 		<a href="submit.html">For Candidates</a>
-		<a href="#contact" class="contact-btn">Contact Us</a>
+		<a href="#contact">Contact Us</a>
 	  </div>
 	</div>
 
